atualizando links para mentorias

--- a/professores/templates/professores/dinamicas_view.html
+++ b/professores/templates/professores/dinamicas_view.html
@@ -96,7 +96,7 @@
       </script>
 
       <br><br>
-      <label for="local">Local:
+      <label for="local">Local / Vídeo-conferência:
         <input id="local" name="local" type="text" size="36" style="width: 100%;" maxlength="280"
         {% if encontro %}
           value="{{encontro.location}}"
