--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -98,12 +98,12 @@
           {% for encontro in encontros %} 
             {
               title: ""
-                {% if encontro.facilitador %}+ 'Facilitador: {{encontro.facilitador}}\n'{% endif %}
-                {% if encontro.location %}+ 'Local: {{encontro.location}}\n'{% endif %}
+                {% if encontro.facilitador %}+ `Facilitador: {{encontro.facilitador}}\n`{% endif %}
+                {% if encontro.location %}+ `Local/Link: {{encontro.location}}\n`{% endif %}
                 {% if encontro.projeto %}
-                  + 'Projeto: ({{encontro.projeto.organizacao.sigla}}) {{encontro.projeto.get_titulo}}' +
-                  '{% if encontro.facilitador %}\nFacilitador: {{encontro.facilitador}}{% endif %}' +
-                  '{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}'
+                  + `Projeto: ({{encontro.projeto.organizacao.sigla}}) {{encontro.projeto.get_titulo}}` +
+                  `{% if encontro.facilitador %}\nFacilitador: {{encontro.facilitador}}{% endif %}` +
+                  `{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}`
                 {% endif %},
                 organizacao: "{{encontro.projeto.organizacao.sigla}}",
                 facilitador: {% if encontro.facilitador %}"{{encontro.facilitador.get_full_name}}"{% else %}null{% endif %},
