--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -80,17 +80,29 @@
                   nome_facilitador = "F: " + facilitador[0] + ' ' + facilitador[facilitador.length - 1];
                 }
               }
-              let nome_orientador = "O: sem orientador"
+
+              /*let nome_orientador = "O: sem orientador"
               if (info.event.extendedProps.orientador) {
                 let orientador = info.event.extendedProps.orientador.split(" ");
                 if(orientador.length > 1) {
                     nome_orientador = "O: " + orientador[0] + ' ' + orientador[orientador.length - 1];
                 }
+              }*/
+              
+              let nome_projeto = "P: sem projeto"
+              if (info.event.extendedProps.projeto) {
+                let projeto = info.event.extendedProps.projeto;
+                console.log(projeto);
+                if(projeto) {
+                    //nome_projeto = "P: " + projeto[0] + ' ' + projeto[projeto.length - 1];
+                    nome_projeto = "P: " + projeto;
+                }
               }
-              info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao +
+
+              info.el.innerHTML = "<b>" + time + "</b><br><nobr style='color:#FAD2D2'>" + info.event.extendedProps.organizacao +
                 "</nobr><br><nobr style='color:#F6F5A3'>" + info.event.extendedProps.local + 
                   "</nobr><br><nobr style='color:#FEFEFE'>" + nome_facilitador + 
-                  "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
+                  "</nobr><br><nobr style='color:#E8E8E8'>" + nome_projeto + "</nobr>";
             } 
           }
         },
@@ -105,6 +117,7 @@
                   `{% if encontro.facilitador %}\nFacilitador: {{encontro.facilitador}}{% endif %}` +
                   `{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}`
                 {% endif %},
+                projeto: {% if encontro.projeto %}`{{encontro.projeto.get_titulo}}`{% else %}null{% endif %},
                 organizacao: "{{encontro.projeto.organizacao.sigla}}",
                 facilitador: {% if encontro.facilitador %}"{{encontro.facilitador.get_full_name}}"{% else %}null{% endif %},
                 orientador: {% if encontro.projeto.orientador %}"{{encontro.projeto.orientador}}"{% else %}null{% endif %},
