só mostra as notas de banca depois de 24h da última postagem

--- a/professores/templates/professores/conceitos_obtidos.html
+++ b/professores/templates/professores/conceitos_obtidos.html
@@ -289,4 +289,7 @@
     </table>
   {% endif %}
 
+  <b>Observação: As notas das bancas só serão fechadas quando todos os avaliadores tiverem avaliado (incluindo o orientador quando for o caso)
+     e depois de 24 horas que a última avaliação foi feita.</b>
+
 {% endblock %}
