--- a/projetos/templates/projetos/meuprojeto_estudantes.html
+++ b/projetos/templates/projetos/meuprojeto_estudantes.html
@@ -62,7 +62,7 @@
               <li>
                 {{dinamica.startDate}} - {{dinamica.endDate|date:'H:i'}}
                 {% if dinamica.location %}; em: <span style="word-break: break-all;">{{dinamica.location}}</span> {% endif %}
-                {% if dinamica.facilitador %}; com: {{dinamica.facilitador}} {% endif %}
+                {% if dinamica.facilitador %}; facilitador: {{dinamica.facilitador}} {% endif %}
               </li>
             {% endfor %}
           </ul>
