--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
   {% comment %} https://stackoverflow.com/questions/69470852/how-to-use-js-to-create-an-error-message-that-is-displayed-on-the-user-interface {% endcomment %}
   <script>
     window.onerror = function (msg, url, lineNo, columnNo, error) {
-      var string = msg.toLowerCase();
+      var string = String(msg).toLowerCase();
       var substring = "script error";
       if (string.indexOf(substring) > -1){
         alert("Erro de Execução de JavaScript, contactar: lpsoares@insper.edu.br");
