--- a/projetos/templates/projetos/comite_pfe.html
+++ b/projetos/templates/projetos/comite_pfe.html
@@ -11,9 +11,14 @@
 
 {% block content %}
 
-  <span class="titulo">{{titulo}}</span>
+  <div id="language_button" style="user-select: none; border-radius: 10px;border: 2px solid #AAAAAA;float: right; margin-top: 4px; margin-left: 8px;"></div>
 
-  {% include "tabelas_top.html" with tabela="Membros" cabecalhos=cabecalhos %}
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
+
+  {% include "tabelas_top_ml.html" with tabela="Membros" cabecalhos=cabecalhos %}
 
     {% for professor in professores %} 
         <tr class="item">
@@ -41,5 +46,7 @@
     }
     window.onload = carrega_pagina
   </script>
+
+  {% include "linguas.html" %}
 
 {% endblock %}
