--- a/projetos/templates/projetos/bancas_lista.html
+++ b/projetos/templates/projetos/bancas_lista.html
@@ -36,13 +36,18 @@
 
 {% block content %}
 
-  <span class="titulo">{{titulo}}</span>
+  <div id="language_button" style="user-select: none; border-radius: 10px;border: 2px solid #AAAAAA;float: right; margin-top: 4px; margin-left: 8px;"></div>
+
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" %}
 
   <div class="atualizar">
-    {% include "tabelas_top.html" with tabela="Bancas" cabecalhos=cabecalhos %}
+    {% include "tabelas_top_ml.html" with tabela="Bancas" cabecalhos=cabecalhos %}
     {% for banca in bancas %}
       <tr class="item">
         <td>{{banca.get_tipo_de_banca_display}}</td>
@@ -102,5 +107,6 @@
   </div>
   
   {% include "edicoes_ajax.html" with tabela="Bancas" %}
+  {% include "linguas.html" %}
 
 {% endblock %}
