--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -11,13 +11,18 @@
 
 {% block content %}
 
-  <span class="titulo">{{titulo}}</span>
+  <div id="language_button" style="user-select: none; border-radius: 10px;border: 2px solid #AAAAAA;float: right; margin-top: 4px; margin-left: 8px;"></div>
+
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" with avancados=True %}
 
   <div class="atualizar">
-    {% include "tabelas_top.html" with tabela="Projetos" cabecalhos=cabecalhos %}
+    {% include "tabelas_top_ml.html" with tabela="Projetos" cabecalhos=cabecalhos %}
       {% for projeto in projetos %}
         {% with estudantes=projeto.alocacao_set.all %}
           <tr class="item">
@@ -84,5 +89,6 @@
   </div>
   
   {% include "edicoes_ajax.html" with tabela='Projetos' avancados=True %}
+  {% include "linguas.html" %}
 
 {% endblock %}
