--- a/templates/selecao_ajax.html
+++ b/templates/selecao_ajax.html
@@ -4,7 +4,7 @@
   Data: 3 de Maio de 2024
 {% endcomment %}
 
-{% comment %} <script> {% endcomment %}
+<script>
 
   var request_ajax = null;
     
@@ -20,7 +20,6 @@
     
     request_ajax = $.ajax({
         type: "POST",
-        //url: "Normalmente a mesma página",
         data: {
             nome: nome,
             "csrfmiddlewaretoken": "{{ csrf_token }}",
@@ -39,7 +38,18 @@
             {% endif %}
             carrega_pagina();
             $(".to_label").removeClass("label_animado");
-            $(".filter").attr('disabled',false);
+            $(".filter").attr("disabled",false);
+
+            // Para selecionar o idioma
+            lingua_atual = localStorage.getItem("lingua");
+            if (lingua_atual == "en") {
+              $('[lang="pt"]').css("display", "none");
+              $('[lang="en"]').css("display", "initial");
+            } else {
+              $('[lang="pt"]').css("display", "initial");
+              $('[lang="en"]').css("display", "none");
+            }
+
           } // else {% comment %} Ignorando resposta {% endcomment %}
 
         },
@@ -57,4 +67,4 @@
   }
   recarregar(); {% endcomment %}
 
-{% comment %} </script> {% endcomment %}
+</script>
