--- a/estudantes/templates/estudantes/minhas_bancas.html
+++ b/estudantes/templates/estudantes/minhas_bancas.html
@@ -88,14 +88,7 @@
 
           <div>
             <b>Membros da Banca:</b>
-            <ol>
-              {% if projeto.orientador and banca.tipo_de_banca == 0 or banca.tipo_de_banca == 1 %}
-                <li> {{banca.get_projeto.orientador.user.get_full_name}} [orientador] <a href="mailto:{{banca.get_projeto.orientador.user.email}}">&lt;{{banca.get_projeto.orientador.user.email}}&gt;</a></li>
-              {% endif %}
-              {% for membro in banca.membros %}
-                <li>{{membro.get_full_name}} <a href="mailto:{{membro.email}}">&lt;{{membro.email}}&gt;</a></li>
-              {% endfor %}
-            </ol>
+            {% include "membros_da_banca.html" %}
 
             {% if user.tipo_de_usuario != 1 or banca|exibe_notas_banca %} {% comment %} Filtra certas avaliações para estudantes não verem {% endcomment %}
               {% with avaliacao=banca.get_avaliacoes %}
