corrigindo mensagem de cancelamento de dinâmica

--- a/estudantes/templates/estudantes/encontros_marcar.html
+++ b/estudantes/templates/estudantes/encontros_marcar.html
@@ -102,7 +102,7 @@
                   </div>
                 {% endif %}
                 {% if e.projeto and e.projeto == projeto %}
-                  <div style="text-decoration: underline; margin-left: 1em; display: inline-block; text-wrap: nowrap;">Horário Confirmado para seu grupo!</div>
+                  <div style="text-decoration: underline; margin-left: 0.5em; margin-right: 0.5em; display: inline-block; text-wrap: nowrap;">Horário Confirmado para seu grupo!</div>
                 {% endif %}
               </label>
               {% endfor %}
