--- a/professores/templates/professores/avaliacoes_pares.html
+++ b/professores/templates/professores/avaliacoes_pares.html
@@ -30,27 +30,29 @@
 
   <div class="atualizar">
 
-    {% for projeto in projetos %}
+    {% if not edicoes %}
+      {% for projeto in projetos %}
 
-    <div class="div_arredondado">
+        <div class="div_arredondado">
 
-      {% include "cabecalho_projeto.html" %}
+          {% include "cabecalho_projeto.html" %}
 
-      <div style="margin-top: 18px;">
-        <strong>Avaliações de Pares Intermediárias:</strong><br>
-        {% include "pares.html" with tipo_avaliacao="intermediaria" %}
-      </div>
+          <div style="margin-top: 18px;">
+            <strong>Avaliações de Pares Intermediárias:</strong><br>
+            {% include "pares.html" with tipo_avaliacao="intermediaria" %}
+          </div>
 
-      <div style="margin-top: 18px;">
-        <strong>Avaliações de Pares Finais:</strong><br>
-        {% include "pares.html" with tipo_avaliacao="final" %}
-      </div>
+          <div style="margin-top: 18px;">
+            <strong>Avaliações de Pares Finais:</strong><br>
+            {% include "pares.html" with tipo_avaliacao="final" %}
+          </div>
 
-    </div>
+        </div>
 
-    {% empty %}
-      Sem alocações de projetos esse semestre.
-    {% endfor %}
+      {% empty %}
+        Sem alocações de projetos esse semestre.
+      {% endfor %}
+    {% endif %}
 
     <script>
       function carrega_pagina(){};
