removendo reload do index

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -8,7 +8,7 @@
 {% block head %}
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/indexes.css' %}">
-  {% include "reload.html" %}
+  {% comment %} {% include "reload.html" %} {% endcomment %}
 {% endblock %}
 
 {% block content %}
