exibindo corretamente as colunas no botão da coluna das tabelas

--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -48,6 +48,8 @@
 
           </tr>
         {% endfor %}
+        {% comment %} Não mudar o caption para varias linhas pois o PDF será gerado errado {% endcomment %}
+        <caption style="text-align:right;"><small>{% for curso in cursos %}<span style="white-space: nowrap;">{{curso.sigla_curta}}: {{curso.nome}}</span>{% if not forloop.last %} / {% endif %}{% endfor %}</small></caption>
       </table>
     </div>
 
