--- a/administracao/templates/administracao/exportar.html
+++ b/administracao/templates/administracao/exportar.html
@@ -21,26 +21,13 @@
   <span class="titulo">{{ titulo }}</span>
   {% if modo == "relatorios" %}
     <table>
-      <tr>
-        <td>Propostas</td>
-        <td><a href="{% url 'relatorio' 'propostas' 'HTML'%}">HTML</a></td>
-        <td><a href="{% url 'relatorio' 'propostas' 'PDF'%}">PDF</a></td>
-      </tr>
-      <tr>
-        <td>Projetos</td>
-        <td><a href="{% url 'relatorio' 'projetos' 'HTML'%}">HTML</a></td>
-        <td><a href="{% url 'relatorio' 'projetos' 'PDF'%}">PDF</a></td>
-      </tr>
-      <tr>
-        <td>Estudantes</td>
-        <td><a href="{% url 'relatorio' 'estudantes' 'HTML'%}">HTML</a></td>
-        <td><a href="{% url 'relatorio' 'estudantes' 'PDF'%}">PDF</a></td>
-      </tr>
-      <tr>
-        <td>Feedbacks</td>
-        <td><a href="{% url 'relatorio' 'feedbacks' 'HTML'%}">HTML</a></td>
-        <td><a href="{% url 'relatorio' 'feedbacks' 'PDF'%}">PDF</a></td>
-      </tr>
+      {% for nome, dado in relatorios %}
+        <tr>
+          <td>{{ nome }}</td>
+          <td><a href="{% url 'relatorio' dado 'HTML'%}">HTML</a></td>
+          <td><a href="{% url 'relatorio' dado 'PDF'%}">PDF</a></td>
+        </tr>
+      {% endfor %}
     </table>
     <br><br>
   {% endif %}
@@ -53,66 +40,14 @@
         <td><b><a href="{% url 'backup' 'xls'%}">XLS</a></b></td>
         <td><b><a href="{% url 'backup' 'json'%}">JSON</a></b></td>
       </tr>
-      <tr>
-        <td>Projetos</td>
-        <td><a href="{% url 'export' 'projetos' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'projetos' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'projetos' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Organizações</td>
-        <td><a href="{% url 'export' 'organizacoes' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'organizacoes' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'organizacoes' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Opções</td>
-        <td><a href="{% url 'export' 'opcoes' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'opcoes' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'opcoes' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Avaliações</td>
-        <td><a href="{% url 'export' 'avaliacoes' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'avaliacoes' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'avaliacoes' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Usuários</td>
-        <td><a href="{% url 'export' 'usuarios' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'usuarios' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'usuarios' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Estudantes</td>
-        <td><a href="{% url 'export' 'alunos' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'alunos' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'alunos' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Professores</td>
-        <td><a href="{% url 'export' 'professores' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'professores' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'professores' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Parceiros</td>
-        <td><a href="{% url 'export' 'parceiros' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'parceiros' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'parceiros' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Configuração</td>
-        <td><a href="{% url 'export' 'configuracao' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'configuracao' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'configuracao' 'json'%}">JSON</a></td>
-      </tr>
-      <tr>
-        <td>Feedbacks</td>
-        <td><a href="{% url 'export' 'feedbacks' 'csv'%}">CSV</a></td>
-        <td><a href="{% url 'export' 'feedbacks' 'xls'%}">XLS</a></td>
-        <td><a href="{% url 'export' 'feedbacks' 'json'%}">JSON</a></td>
-      </tr>
+      {% for nome, dado in dados %}
+        <tr>
+          <td>{{ nome }}</td>
+          <td><a href="{% url 'export' dado 'csv'%}">CSV</a></td>
+          <td><a href="{% url 'export' dado 'xls'%}">XLS</a></td>
+          <td><a href="{% url 'export' dado 'json'%}">JSON</a></td>
+        </tr>
+      {% endfor %}
     </table>
     <br>
     <br>
@@ -120,7 +55,7 @@
 
   Envia mensagem com dados<br>
   <label for="email">e-mail:</label> <input type="email" size="40" id="email" name="email" value="{{user.email}}" oninvalid="this.setCustomValidity('Digite um e-mail válido')" oninput="this.setCustomValidity('')" required><br>
-  <input type="submit" value="Enviar">
+  <input type="submit" class="btn btn-primary mb-1 mt-2" value="Enviar">
 
   </form>
 
