--- a/organizacoes/templates/organizacoes/projeto_feedback.html
+++ b/organizacoes/templates/organizacoes/projeto_feedback.html
@@ -7,11 +7,9 @@
 
 {% block head %}
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/style_botao_lingua.css' %}">
   <script src="{% static 'js/aviso_perda_edicao.js' %}"></script>
 
   <style>
-    
     datalist {
       display: flex;
       width: 100%;
@@ -43,12 +41,6 @@
     <span lang="pt">{{ titulo }}</span>
     <span lang="en">Organizations Feedback Form</span>
   </span>
-
-
-  <div style="max-width: 850px;">
-  {% comment %} Botão para seletor de lingua (não esqueça do CSS) {% endcomment %}
-  {% include "botao_lingua.html" %}
-  </div>
 
   <form action="" method="post"> {% csrf_token %}  
 
@@ -191,5 +183,7 @@
   <script>
     aviso_perda_edicao("form", "Você tem alterações não salvas. Tem certeza que deseja sair?");
   </script>
+
+  {% include "linguas.html" %}
 
 {% endblock %}
