--- a/organizacoes/templates/organizacoes/organizacoes.html
+++ b/organizacoes/templates/organizacoes/organizacoes.html
@@ -8,12 +8,15 @@
 <h5>Propostas</h5>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'proposta_submissao' %}">Submeter Proposta de Projeto</a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'carrega_proposta' %}">Carrega Proposta de Projeto em PDF</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'parceiro_propostas' %}">Propostas Submetidas</a></div>
-<br>
 
-<h5>Projetos</h5>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'parceiro_projetos' %}">Lista de Projetos</a></div>
-<br>
+{% if user.is_authenticated %}
+  <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'parceiro_propostas' %}">Propostas Submetidas</a></div>
+  <br>
 
-<h5>Feedbacks</h5>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'projeto_feedback' %}">Enviar feedback de projeto</a></div>
+  <h5>Projetos</h5>
+  <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'parceiro_projetos' %}">Lista de Projetos</a></div>
+  <br>
+
+  <h5>Feedbacks</h5>
+  <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'projeto_feedback' %}">Enviar feedback de projeto</a></div>
+{% endif %}
