--- a/templates/base.html
+++ b/templates/base.html
@@ -81,11 +81,14 @@
         {% if user.tipo_de_usuario == 1 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
             <a href="{% url 'index_estudantes' %}">Área dos Estudantes</a>
         {% endif %}
+      {% endif %}
 
-        {% if user.tipo_de_usuario == 3 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-            <a href="{% url 'index_organizacoes' %}">Área dos Parceiros</a>
-        {% endif %}
+      {% comment %} Deixa qualquer pessoa ver para submeter um projeto {% endcomment %}
+      {% comment %} {% if user.tipo_de_usuario == 3 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %} {% endcomment %}
+          <a href="{% url 'index_organizacoes' %}">Área dos Parceiros</a>
+      {% comment %} {% endif %} {% endcomment %}
     
+      {% if user.is_authenticated %}
         {% if perms.users.altera_professor %}
           <a href="{% url 'index_professor'%}">Área do Professor</a>
           <a href="{% url 'index_academica' %}">Área Acadêmica</a>
@@ -96,9 +99,9 @@
           <a href="{% url 'index_projetos'%}">Projetos</a>
         {% endif %}
 
-      {% endif %} 
+      {% endif %}
 
-      <a href="{% url 'index_documentos'%}">Documentos</a>
+      <a href="{% url 'index_documentos'%}">Documentações</a>
 
       {% if user.is_authenticated %}
         <a href="{% url 'logout'%}">Logout</a>
