--- a/organizacoes/templates/organizacoes/documento_view.html
+++ b/organizacoes/templates/organizacoes/documento_view.html
@@ -177,7 +177,7 @@
       <div class="mb-3 row text-truncate">
         <label for="arquivo" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.5em;">Arquivo</label>
         <div class="col2">
-          <input required id="arquivo" type="file" name="arquivo" class="form-control" style="border: 0px; padding-left: 0px;"
+          <input {% if not documentos %}required{% endif %} id="arquivo" type="file" name="arquivo" class="form-control" style="border: 0px; padding-left: 0px;"
             {% include "formatos_suportados.html" %}>
           {% if documentos %}
             <input type="hidden" id="documentos" name="documentos" value="{{documento_id}}"/>
@@ -253,8 +253,8 @@
       }
     });
 
-    $('#projeto').change(function() {
-      $('#organizacao').val($('#projeto option:selected').attr('data-org') );
+    $("#projeto").change(function() {
+      $("#organizacao").val($('#projeto option:selected').attr("data-org") );
 
     });
 
