--- a/professores/templates/professores/entrega_avaliar.html
+++ b/professores/templates/professores/entrega_avaliar.html
@@ -177,8 +177,8 @@
 
       <button class="btn btn-primary mb-1" type="submit" style="margin-right: 1em;"><span lang="pt">Gravar Avaliação</span><span lang="en">Save Evaluation</span></button>
       <label for="envia"><input type="checkbox" id="envia" name="envia" style="margin-right: 4px;">
-        {% comment %} <span lang="pt">Enviar e-mail com resultados para estudante(s)</span>
-        <span lang="en">Send email with results to student(s)</span> {% endcomment %}
+        <span lang="pt">Enviar e-mail nesse instante com resultados para estudante(s)</span>
+        <span lang="en">Send email in this instant with results to student(s)</span>
       </label>
       <p>&nbsp;</p>
 
