mostrando organização em avaliação de pares

--- a/professores/templates/professores/ver_pares_projeto.html
+++ b/professores/templates/professores/ver_pares_projeto.html
@@ -39,7 +39,7 @@
 
     <b>Projeto:</b>
     <a href="{% url 'projeto_completo' projeto.id %}">
-      {{projeto.get_titulo}}
+      [{{ projeto.organizacao.nome }}] {{projeto.get_titulo}}
       {% include "tipo_projeto.html" %}<br>
     </a>
 
