deixando dinamicas e bancas parecidas

--- a/professores/templates/professores/conceitos_obtidos.html
+++ b/professores/templates/professores/conceitos_obtidos.html
@@ -29,7 +29,7 @@
 
   </style>
 
-  {% include "cores_bancas.html" %}
+  {% include "cores_bancas_mentorias.html" %}
   
   <script>{% include "tooltip.js" %}</script>
 
