--- a/projetos/templates/projetos/certificacao_falconi.html
+++ b/projetos/templates/projetos/certificacao_falconi.html
@@ -36,7 +36,7 @@
 
   </style>
 
-  {% include "cores_bancas.html" %}
+  {% include "cores_bancas_mentorias.html" %}
 
   {% comment %} Converte notas para conceitos e vice-versa {% endcomment %}
   {% include "converte_notas.html" %}
