--- a/templates/cores_bancas_mentorias.html
+++ b/templates/cores_bancas_mentorias.html
@@ -9,6 +9,8 @@
   var color_banca_intermediaria = "#E6B734";
   var color_banca_falconi = "#FF38A6";
   var color_probation = "#FF8C00";
+  var color_horario_agendado = "#5151D3";
+  var color_horario_em_aberto = "#307f30";
 </script>
 
 <style>
@@ -17,5 +19,7 @@
     --color_banca_intermediaria: #E6B734;
     --color_banca_falconi: #FF38A6;
     --color_probation: #FF8C00;
+    --color_horario_agendado: #5151D3;
+    --color_horario_em_aberto: #307f30;
   }
 </style>
