--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -7,9 +7,8 @@
 
 {% block head %}
   {% load static %}
-  <script>{% include "tooltip.js" %}</script>
   {% include "heads_calendar.html" %}
-  {% include "cores_bancas.html" %}
+  {% include "cores_bancas_mentorias.html" %}
 {% endblock %}
 
 {% block content %}
