--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -52,7 +52,7 @@
 
   <script>{% include "tooltip.js" %}</script>
   {% include "heads_calendar.html" %}
-  {% include "cores_bancas.html" %}
+  {% include "cores_bancas_mentorias.html" %}
 
 {% endblock %}
 
@@ -256,43 +256,44 @@
     <h4>Calendário</h4>
     {% include "calendario_bancas.html" %}
 
-  </div>
+    <div class="sem_agendamento">
+      {% if sem_banca %}
+        <br>
+        <h5>Projetos ativos sem bancas agendadas:</h5>
+        <ul>
+        {% for projeto in sem_banca %}
+          <li>
 
-  <div class="sem_agendamento">
-    {% if sem_banca %}
-      <br>
-      <h5>Projetos ativos sem bancas agendadas:</h5>
-      <ul>
-      {% for projeto in sem_banca %}
-        <li>
+            {% if projeto.orientador %}
+              <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
+                {{projeto.orientador.user.get_full_name}}:
+              </a>
+            {% endif %}
 
-          {% if projeto.orientador %}
-            <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
-              {{projeto.orientador.user.get_full_name}}:
-            </a>
-          {% endif %}
+            {% if projeto.organizacao %}
+              [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}"
+                >{{ projeto.organizacao.nome }}</a
+              >]
+            {% endif %}
 
-          {% if projeto.organizacao %}
-            [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}"
-              >{{ projeto.organizacao.nome }}</a
-            >]
-          {% endif %}
+            <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
+            {% include "tipo_projeto.html" %}
 
-          <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
-          {% include "tipo_projeto.html" %}
+          </li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
 
-        </li>
-      {% endfor %}
-      </ul>
-    {% endif %}
   </div>
 
   <script>
-    function carrega_pagina() {};
+    function carrega_pagina() {
+      montar_calendario();
+    };
     function carrega_site() {
       {% include "edicao_puxar_local_ou_versao.js" %}
       carrega_pagina();
-      montar_calendario();
     };
 
     window.onload = carrega_site
