botão de impressora some com de línguas

--- a/templates/impressora.html
+++ b/templates/impressora.html
@@ -64,6 +64,7 @@
       $(".esconder").hide();
       $(".email").hide();
       $(".images").hide();
+      $("#language_box").hide();
 
       // Remove box-shadow effect from class estudante em montar_grupos
       $(".estudante").removeClass("boxshadow");
@@ -89,6 +90,7 @@
       $(".esconder").show();
       $(".email").show();
       $(".images").show();
+      $("#language_box").show();
 
       // Add box-shadow effect from class estudante em montar_grupos
       $(".estudante").addClass("boxshadow");
