--- a/templates/relatos.html
+++ b/templates/relatos.html
@@ -29,6 +29,7 @@
         {% else %}
           {% if relatos %}
             {% if avaliados %}
+              <a href="{% url 'relato_avaliar' projeto.id evento.id %}">
                 <span style="color:green">Avaliado pelo orientador</span>
                 {% for avaliado in avaliados %}
                   <script>
@@ -42,8 +43,11 @@
                 {% if observacoes %}
                   <span data-toggle="tooltip" data-html="true" animation="true" title="{{ observacoes.observacoes_orientador}}">&#x1F4AC;</span>
                 {% endif %}
+              </a>
             {% else %}
+              <a href="{% url 'relato_avaliar' projeto.id evento.id %}">
                 <span style="color:brown">Aguardando avaliação do orientador</span>
+              </a>
             {% endif %}
           {% else %}
             <span style="color:red">Sem relatos dos estudantes</span>
